--- a/views/index.html
+++ b/views/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head><meta charset="utf-8"/>
-    <title>DELI-VERY</title>
+    <title>Burger Hut</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
+    <header>
+      <img src="https://www.brasserieappelmans.be/wp-content/uploads/2017/11/private_bar.jpg">
+      <h1>Welcome to Burger Hut</h1>
+    </header>
     <main>
-      <h1>Welcome to BurgerOnline</h1>
       <section id="menu">
         <h2>Select burger</h2>
         <p>This is where you execute burger selection</p>
-        <table>
-          <thead>
-            <th>Hamburger</th>
-            <th>Bacon Burger</th>
-            <th>Kids Burger</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td><img src="http://www.pngpix.com/wp-content/uploads/2016/03/Hamburger-PNG-Image.png" width="200"></td>
-              <td><img src="http://freepngimages.com/wp-content/uploads/2016/11/bacon-burger.png" width="200"></td>
-              <td><img src="http://pngimg.com/uploads/burger_sandwich/burger_sandwich_PNG4115.png" width="200"></td>
-            </tr>
-            <tr>
-              <td>
-                <li>100 % calories</li>
-                <li>Contains fat</li>
-                <li>May contain traces of vitamines</li>
-              </td>
-              <td>
-                <li>87 % emulsifier</li>
-                <li>Contains pork</li>
-              </td>
-              <td>
-                <li>Fat (2300 % RDI)</li>
-                <li>Contains fat</li>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="wrapper">
+          <div class="title a">
+            Hamburger
+          </div>
+          <div class="title b">
+            Bacon Burger
+          </div>
+          <div class="title c">
+            Kids Burger
+          </div>
+          <div class="image a">
+            <img src="http://www.pngpix.com/wp-content/uploads/2016/03/Hamburger-PNG-Image.png" width="200">
+          </div>
+          <div class="image b">
+            <img src="http://freepngimages.com/wp-content/uploads/2016/11/bacon-burger.png" width="200">
+          </div>
+          <div class="image c">
+            <img src="http://pngimg.com/uploads/burger_sandwich/burger_sandwich_PNG4115.png" width="200">
+          </div>
+          <div class="ingredients a">
+            <li>100 % calories</li>
+            <li>Contains <span class="allergy">fat</span></li>
+            <li>May contain traces of <span class="allergy">vitamines</span></li>
+          </div>
+          <div class="ingredients b">
+            <li>87 % <span class="allergy">emulsifier</span></li>
+            <li>Contains <span class="allergy">pork</span></li>
+          </div>
+          <div class="ingredients c">
+            <li><span class="allergy">Fat</span> (2300 % RDI)</li>
+            <li>Contains <span class="allergy">fat</li>
+          </div>
+        </div>
       </section>
       <section id="contact">
         <h2>Customer information</h2>
@@ -75,13 +83,14 @@
             <input type="radio" id="male" name="gender" value="male"><label for="male">Male</label><br>
             <input type="radio" id="undisclosed" name="gender" value="undisclosed"><label for="undisclosed">Undisclosed</label><br>
           </p>
-          <p>
-            <button type="submit"><img src="https://image.flaticon.com/icons/png/512/178/178779.png" width="20">Place order</button>
-          </p>
         </form>
       </section>
+      <p>
+        <button align="center" type="submit"><img src="https://image.flaticon.com/icons/png/512/178/178779.png" width="20">Place order</button>
+      </p>
     </main>
     <footer>
+      &copy; 2019 Hypothetical Burgers Inc.
     </footer>
   </body>
 </html>
